[package]
name = "rust_saber"
version = "0.1.0"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
android_logger = "0.8.3"
rust_saber_macros = { path = "../rust_saber_macros" }
libc = "0.2.60"
proc-maps = "0.1.6"
lazy_static = "1.3.0"
log-panics = "2.0.0"
android_log-sys = "0.1.2"

[build-dependencies]
cc = "1.0.37"
